templates/authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.middlewares.auth-strip.stripPrefix.prefixes: /api/authentication
    traefik.http.routers.authentication.entrypoints: web
    traefik.http.routers.authentication.middlewares: auth-strip
    traefik.http.routers.authentication.rule: PathPrefix(`/api/authentication`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: authentication
  name: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authentication
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -v
        kompose.service.type: clusterip
        kompose.version: 1.35.0 (HEAD)
        traefik.enable: "true"
        traefik.http.middlewares.auth-strip.stripPrefix.prefixes: /api/authentication
        traefik.http.routers.authentication.entrypoints: web
        traefik.http.routers.authentication.middlewares: auth-strip
        traefik.http.routers.authentication.rule: PathPrefix(`/api/authentication`)
        traefik.ingress.kubernetes.io/service.nativelb: "true"
      labels:
        io.kompose.service: authentication
    spec:
      containers:
        - env:
            - name: ADMIN_KEY
              value: superAdminKey
            - name: JWT_SECRET
              value: superSecretPassword
            - name: MONGODB_URI
              value: mongodb://mongo:27017/Authentication
            - name: NODE_ENV
              value: test
          image: macjestoritve.azurecr.io/authentication
          livenessProbe:
            exec:
              command:
                - curl -f http://authentication:3000/
          name: rso-authentication
      restartPolicy: Always
