templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.routers.frontend.entrypoints: web
    traefik.http.routers.stock.rule: PathPrefix(`/`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -v
        kompose.service.type: clusterip
        kompose.version: 1.35.0 (HEAD)
        traefik.enable: "true"
        traefik.http.routers.frontend.entrypoints: web
        traefik.http.routers.stock.rule: PathPrefix(`/`)
        traefik.ingress.kubernetes.io/service.nativelb: "true"
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: macjestoritve.azurecr.io/frontend
          livenessProbe:
            exec:
              command:
                - curl -f http://frontend:4200/
          name: rso-frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
