templates/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.middlewares.grafana-strip.stripPrefix.prefixes: /grafana
    traefik.http.routers.grafana.entrypoints: web
    traefik.http.routers.grafana.middlewares: grafana-strip
    traefik.http.routers.grafana.rule: PathPrefix(`/grafana`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -v
        kompose.service.type: clusterip
        kompose.version: 1.35.0 (HEAD)
        traefik.enable: "true"
        traefik.http.middlewares.grafana-strip.stripPrefix.prefixes: /grafana
        traefik.http.routers.grafana.entrypoints: web
        traefik.http.routers.grafana.middlewares: grafana-strip
        traefik.http.routers.grafana.rule: PathPrefix(`/grafana`)
        traefik.ingress.kubernetes.io/service.nativelb: "true"
      labels:
        io.kompose.service: grafana
    spec:
      containers:
        - env:
            - name: GF_LOG_LEVEL
              value: debug
            - name: GF_SERVER_ROOT_URL
              value: http://localhost/grafana
          image: macjestoritve.azurecr.io/grafana
          name: rso-grafana
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
