templates/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: loki
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: loki
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -v
        kompose.service.type: clusterip
        kompose.version: 1.35.0 (HEAD)
        traefik.ingress.kubernetes.io/service.nativelb: "true"
      labels:
        io.kompose.service: loki
    spec:
      containers:
        - env:
            - name: config.file
              value: /etc/loki_config.yml
          image: macjestoritve.azurecr.io/loki
          name: rso-loki
          ports:
            - containerPort: 3100
              protocol: TCP
      restartPolicy: Always
