templates/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.middlewares.orders-strip.stripPrefix.prefixes: /api/orders
    traefik.http.routers.orders.entrypoints: web
    traefik.http.routers.orders.middlewares: orders-strip
    traefik.http.routers.orders.rule: PathPrefix(`/api/orders`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: orders
  name: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: orders
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -v
        kompose.service.type: clusterip
        kompose.version: 1.35.0 (HEAD)
        traefik.enable: "true"
        traefik.http.middlewares.orders-strip.stripPrefix.prefixes: /api/orders
        traefik.http.routers.orders.entrypoints: web
        traefik.http.routers.orders.middlewares: orders-strip
        traefik.http.routers.orders.rule: PathPrefix(`/api/orders`)
        traefik.ingress.kubernetes.io/service.nativelb: "true"
      labels:
        io.kompose.service: orders
    spec:
      containers:
        - env:
            - name: MONGODB_URI
              value: mongodb://mongo:27017/Orders
            - name: NODE_ENV
              value: test
          image: macjestoritve.azurecr.io/orders
          livenessProbe:
            exec:
              command:
                - curl -f http://orders:3000/
          name: rso-orders
      restartPolicy: Always
