templates/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.middlewares.prometheus-strip.stripPrefix.prefixes: /prometheus
    traefik.http.routers.prometheus.entrypoints: web
    traefik.http.routers.prometheus.middlewares: prometheus-strip
    traefik.http.routers.prometheus.rule: PathPrefix(`/prometheus`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -v
        kompose.service.type: clusterip
        kompose.version: 1.35.0 (HEAD)
        traefik.enable: "true"
        traefik.http.middlewares.prometheus-strip.stripPrefix.prefixes: /prometheus
        traefik.http.routers.prometheus.entrypoints: web
        traefik.http.routers.prometheus.middlewares: prometheus-strip
        traefik.http.routers.prometheus.rule: PathPrefix(`/prometheus`)
        traefik.ingress.kubernetes.io/service.nativelb: "true"
      labels:
        io.kompose.service: prometheus
    spec:
      containers:
        - image: macjestoritve.azurecr.io/prometheus
          name: rso-prometheus
      restartPolicy: Always
