templates/stock-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.middlewares.stock-strip.stripPrefix.prefixes: /api/stock
    traefik.http.routers.stock.entrypoints: web
    traefik.http.routers.stock.middlewares: stock-strip
    traefik.http.routers.stock.rule: PathPrefix(`/api/stock`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: stock
  name: stock
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: stock
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -v
        kompose.service.type: clusterip
        kompose.version: 1.35.0 (HEAD)
        traefik.enable: "true"
        traefik.http.middlewares.stock-strip.stripPrefix.prefixes: /api/stock
        traefik.http.routers.stock.entrypoints: web
        traefik.http.routers.stock.middlewares: stock-strip
        traefik.http.routers.stock.rule: PathPrefix(`/api/stock`)
        traefik.ingress.kubernetes.io/service.nativelb: "true"
      labels:
        io.kompose.service: stock
    spec:
      containers:
        - image: macjestoritve.azurecr.io/stock
          livenessProbe:
            exec:
              command:
                - curl -f http://stock:8080/
          name: rso-stock
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
