templates/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.expose: "true"
    kompose.service.expose.ingress-class-name: traefik
    kompose.service.type: loadbalancer
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.routers.traefik.entrypoints: traefik
    traefik.http.routers.traefik.service: api@internal
  labels:
    io.kompose.service: traefik
  name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: traefik
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -v
        kompose.service.expose: "true"
        kompose.service.expose.ingress-class-name: traefik
        kompose.service.type: loadbalancer
        kompose.version: 1.35.0 (HEAD)
        traefik.enable: "true"
        traefik.http.routers.traefik.entrypoints: traefik
        traefik.http.routers.traefik.service: api@internal
      labels:
        io.kompose.service: traefik
    spec:
      containers:
        - args:
            - --api.insecure=true
            - --api.dashboard=true
            - --providers.kubernetesIngress=true
            - --entrypoints.traefik.address=:8080
            - --entrypoints.web.address=:80
          image: traefik:v3.3
          name: rso-traefik
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
