templates/authentication-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.middlewares.auth-strip.stripPrefix.prefixes: /api/authentication
    traefik.http.routers.authentication.entrypoints: web
    traefik.http.routers.authentication.middlewares: auth-strip
    traefik.http.routers.authentication.rule: PathPrefix(`/api/authentication`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: authentication
  name: authentication
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 3000
  selector:
    io.kompose.service: authentication
  type: ClusterIP
