templates/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.middlewares.cart-strip.stripPrefix.prefixes: /api/cart
    traefik.http.routers.cart.entrypoints: web
    traefik.http.routers.cart.middlewares: cart-strip
    traefik.http.routers.cart.rule: PathPrefix(`/api/cart`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: cart
  name: cart
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8080
  selector:
    io.kompose.service: cart
  type: ClusterIP
