templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.routers.frontend.entrypoints: web
    traefik.http.routers.stock.rule: PathPrefix(`/`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 80
  selector:
    io.kompose.service: frontend
  type: ClusterIP
