templates/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.middlewares.grafana-strip.stripPrefix.prefixes: /grafana
    traefik.http.routers.grafana.entrypoints: web
    traefik.http.routers.grafana.middlewares: grafana-strip
    traefik.http.routers.grafana.rule: PathPrefix(`/grafana`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: grafana
  type: ClusterIP
