templates/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.middlewares.prometheus-strip.stripPrefix.prefixes: /prometheus
    traefik.http.routers.prometheus.entrypoints: web
    traefik.http.routers.prometheus.middlewares: prometheus-strip
    traefik.http.routers.prometheus.rule: PathPrefix(`/prometheus`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: prometheus
  type: ClusterIP
