templates/stock-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.type: clusterip
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.middlewares.stock-strip.stripPrefix.prefixes: /api/stock
    traefik.http.routers.stock.entrypoints: web
    traefik.http.routers.stock.middlewares: stock-strip
    traefik.http.routers.stock.rule: PathPrefix(`/api/stock`)
    traefik.ingress.kubernetes.io/service.nativelb: "true"
  labels:
    io.kompose.service: stock
  name: stock
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8080
  selector:
    io.kompose.service: stock
  type: ClusterIP
