templates/traefik-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c -v
    kompose.service.expose: "true"
    kompose.service.expose.ingress-class-name: traefik
    kompose.service.type: loadbalancer
    kompose.version: 1.35.0 (HEAD)
    traefik.enable: "true"
    traefik.http.routers.traefik.entrypoints: traefik
    traefik.http.routers.traefik.service: api@internal
  labels:
    io.kompose.service: traefik-tcp
  name: traefik-tcp
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: traefik
  type: LoadBalancer
